fixed home page alignment of title and navbar

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -9,6 +9,9 @@
   width: 100vw;
   background-size: cover;
   background-position: 60% 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .home-content-container {
@@ -17,7 +20,7 @@
   flex-direction: column;
   justify-content: space-around;
   margin-top: 15vh;
-  margin-left: 5vh;
+  margin-left: 3.5rem;
 }
 
 .title {
